--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,12 @@
 .App-link {
   color: #61dafb;
 }
+.to-do-box {
+  background-color: #282c34;
+  border: 3px solid #fff;
+  border-radius: 20px;
+  padding: 10px;
+}
 
 @keyframes App-logo-spin {
   from {
